--- a/Youth.html
+++ b/Youth.html
@@ -8,12 +8,12 @@
     <body class="secondary">
         <div id="myMenu" class="menu">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="sito.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="Youth.html">Youth</a>
             <a href="Career.html">Career</a>
         </div>
         <span style="font-size:30px;cursor:pointer;color: beige;" onclick="openNav()"><!-- Questo è per le tre righe-->&#9776; Menu</span>
-        <div class="secondary">
+        <div class="Youth">
         <h2>Luka's youth</h2>
         <p>Dončic was born in Ljubljana, the capital city of Slovenia. A really
             small country with a little more than two million habitants. His father was a former
