--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
         <link rel="stylesheet" href="stile.css">
         <title> Luka Dončic </title>
     </head>
-    <body class="sito">
+    <body class="index">
+        <span style="font-size:30px;cursor:pointer;color: beige;" onclick="openNav()"><!-- Questo è per le tre righe-->&#9776; Menu</span>
         <div id="myMenu" class="menu">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="sito.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="Youth.html">Youth</a>
             <a href="Career.html">Career</a>
         </div>
-          <span style="font-size:30px;cursor:pointer;color: beige;" onclick="openNav()"><!-- Questo è per le tre righe-->&#9776; Menu</span>
+        <div>
+          <img src="Luka_backyard.jpg" style="width: 70%; display: block;margin-left: auto; margin-right: auto; "> </img>
+        </div>
     </body>
     <script>
         function openNav() {
