--- a/Career.html
+++ b/Career.html
@@ -34,13 +34,13 @@
                 <h2><li>First year</li></h2>
                 <a href="https://youtu.be/8JeQSvYZ8HA">This is a link to Dončic's highlights of his first NBA season.</a>
                 <h2><li>Second year</li></h2>
-                <a href="https://youtu.be/o7F_-80PIWs">This is a link to Dončic's highlights of his second NBA season.</a>
+                <a href="https://youtu.be/o7F_-80PIWs">This is a link to Dončic's highlights of his first NBA season.</a>
                 <h2><li>Third year</li></h2>
-                <a href="https://youtu.be/aJBl7RMDlVo">This is a link to Dončic's highlights of his third NBA season.</a>
+                <a href="https://youtu.be/aJBl7RMDlVo">This is a link to Dončic's highlights of his first NBA season.</a>
                 <h2><li>Fourth year</li></h2>
-                <a href="https://youtu.be/MzaQO6N3oUQ">This is a link to Dončic's highlights of his fourth NBA season.</a>
+                <a href="https://youtu.be/MzaQO6N3oUQ">This is a link to Dončic's highlights of his first NBA season.</a>
                 <h2><li>Fifth year</li></h2>
-                <a href="https://youtu.be/Lo2wXxFHdOY">This is a link to Dončic's highlights of his fifth NBA season.</a>
+                <a href="https://youtu.be/Lo2wXxFHdOY">This is a link to Dončic's highlights of his first NBA season.</a>
             </ol>
             <br>
             <br>
