--- a/Youth.html
+++ b/Youth.html
@@ -17,7 +17,7 @@
         <h2>Luka's youth</h2>
         <p>Dončic was born in Ljubljana, the capital city of Slovenia. A really
             small country with a little more than two million habitants. His father was a former
-            basketball player and coach, so Dončic's first contact with a basketball ball was pretty early.
+            basketball player and coach, so Dončic met basketball really early into his life.
             He first started playing at age seven and fastly proved that he was a prodigee in the making.
             The young ascending star made himself known in the basketball world and caught the attention 
             of one of the best clubs in Europe: <b>Real Madrid</b>. In the spanish capital his rise and his professional career began.
