--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Inserisci commenti su tutti i doc-->
+<!DOCTYPE html> 
 <html>
     <head>
         <meta charset="UTF-8">
@@ -17,7 +17,8 @@
           <img src="Luka_backyard.jpg" style="width: 70%; display: block;margin-left: auto; margin-right: auto; "> </img>
         </div>
     </body>
-    <script>
+    <!--Lo scipt per il menu al bordo-->
+    <script> 
         function openNav() {
         document.getElementById("myMenu").style.width = "250px";
         }
