--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title> Luka Dončic </title>
     </head>
     <body class="index">
-        <span style="font-size:30px;cursor:pointer;color: beige;" onclick="openNav()"><!-- Questo è per le tre righe-->&#9776; Menu</span>
+        <span style="font-size:30px;cursor:pointer;color: beige;" onclick="openNav()"><!-- Le tre barre vicino al menu-->&#9776; Menu</span>
         <div id="myMenu" class="menu">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="index.html">Home</a>
